Fix logic behind the 100 div size limit

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
@@ -27,7 +27,7 @@ body {
     width: 600px;
     height: 600px;
     margin: 100px auto;
-    border: 0.1rem solid black;
+    background-color: black;
 }
 
 footer {
